# ROS-TCP-Endpoint

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  package.xml  postinst  postrm  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: jira-link.yaml  pre-commit.yaml  sonarqube.yaml  stale.yaml
.yamato/: sonar.yml  yamato-config.yml
ROS_Packages/ros_tcp_endpoint/config/: params.yaml
ROS_Packages/ros_tcp_endpoint/src/ros_tcp_endpoint/: client.py  server.py  tcp_sender.py
client/: client  client.c  wclient.cpp
config/: params.yaml
include/: ConnectionThread.h  EndpointServiceCallbackHelper.h  EndpointShapeShifter.h  MessageTypeInfo.h  SafeQueue.h  ServerThread.h  ServiceClientThread.h  UnityServiceThread.h
launch/: endpoint.launch  endpoint.py
msg/: RosUnitySrvMessage.msg
ros_tcp_endpoint/: client.py  communication.py  default_server_endpoint.py  publisher.py  server.py  service.py  subscriber.py  tcp_sender.py  thread_pauser.py  unity_service.py
src/: ConnectionThread.cpp  EndpointShapeShifter.cpp  MessageTypeInfo.cpp  ServerThread.cpp  ServiceClientThread.cpp  UnityServiceThread.cpp  message_type_info.py  roscpp_endpoint.cpp  service_type_info.py
src/ros_tcp_endpoint/: __init__.py  client.py  communication.py  default_server_endpoint.py  default_server_endpoint_venv.py  exceptions.py  publisher.py  server.py  service.py  subscriber.py  tcp_sender.py  thread_pauser.py  unity_ip_sender.py  unity_monitor.py  unity_service.py
srv/: RosUnityTopicList.srv
tcp_endpoint/: CMakeLists.txt  package.xml
tcp_endpoint/msg/: RosUnityConnectionParam.msg
tcp_endpoint/src/tcp_endpoint/: RosPublisher.py  RosService.py  RosSubscriber.py  RosTCPClientThread.py  RosTCPServer.py  RosUnityHandshakeService.py  UnityTCPSender.py
tcp_endpoint/srv/: RosUnityHandshake.srv
test/: __init__.py  test_client.py  test_copyright.py  test_flake8.py  test_pep257.py  test_server.py  test_smoke.py  test_subscriber.py  test_tcp_sender.py  test_thread_pauser.py  test_unity_service.py
